fix position mobile

--- a/src/components/AuthForms/AuthContentContainer/AuthContentContainer.module.scss
+++ b/src/components/AuthForms/AuthContentContainer/AuthContentContainer.module.scss
@@ -34,8 +34,10 @@
 
 .LoginFormContainer {
   background-color: #ffffff;
-  padding-top: 36px;
-  padding-bottom: 36px;
+  // padding-top: 36px;
+  // padding-bottom: 36px;
+  // padding-right: 20px;
+  padding: 36px 20px;
 
   @media screen and (min-width: 768px) {
     padding: 40px 65px 60px 65px;
