--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -5,8 +5,8 @@
   background-color: rgba(255, 255, 255, 0.4);
   margin-left: auto;
   margin-right: auto;
-  padding-left: 20px;
-  padding-right: 20px;
+  // padding-left: 20px;
+  // padding-right: 20px;
   // padding-bottom: 30px;
   width: $mobile;
   @media screen and (min-width: $tablet) {
